# open_ehr_app

./: .gitignore  README.md  docker-compose.yml  lab_reports.db  main.py  pyproject.toml
backend/: Dockerfile  ehr.db
backend/app/: database.py  initialize_db.py  main.py  models.py  populate_db.py  populate_direct.py  schemas.py
backend/app/routers/: blood_type_panel.py  body_measurement.py  cbc_panel.py  composition.py  lab_analyte.py  lab_test.py  patient.py  reference_range.py  specimen.py
frontend/: Dockerfile  angular.json  frontend_app.py  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/app/: app.component.html  app.config.ts  app.routes.ts
frontend/src/app/pages/blood-type-panel-list/: blood-type-panel-list.component.html  blood-type-panel-list.component.ts
frontend/src/app/pages/body-measurement-list/: body-measurement-list.component.html  body-measurement-list.component.ts
frontend/src/app/pages/cbc-panel-list/: cbc-panel-list.component.html  cbc-panel-list.component.ts
frontend/src/app/pages/composition-list/: composition-list.component.html  composition-list.component.ts
frontend/src/app/pages/home/: home.component.html
frontend/src/app/pages/lab-analyte-list/: lab-analyte-list.component.html  lab-analyte-list.component.ts
frontend/src/app/services/: blood-type-panel.service.ts  body-measurement.service.ts  cbc-panel.service.ts  composition.service.ts  lab-analyte.service.ts  lab-test.service.ts  patient.service.ts  reference-range.service.ts  specimen.service.ts
(+10 files in other folders)
