[project]
name = "open-ehr-app"
version = "0.1.0"
description = "A FastAPI backend for CBC lab reports using SQLAlchemy and SQLite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"